PN-3115 risolti code smells